# SPL

Assignment3/: CMakeLists.txt  README.md
Assignment3/Client/: makefile
Assignment3/Server/src/main/java/: tests.java
Assignment3/Server/src/main/java/bgu/spl/net/api/: BidiMessagingProtocol.java  Connections.java  ConnectionsImpl.java
Assignment3/Server/src/main/java/bgu/spl/net/impl/BidiMessaging/: BidiEncdec.java  BidiMessageProtocol.java  BidiNetworkServer.java  Database.java  Message.java  Network.java  User.java  UserList.java
Assignment3/Server/src/main/java/bgu/spl/net/impl/BidiMessaging/Messages/: ACKmessage.java  ERRORmessage.java  FOLLOWmessage.java  LOGINmessage.java  LOGOUTmessage.java  (+6 more)
Assignment3/Server/src/main/java/bgu/spl/net/impl/echo/: EchoClient.java  EchoProtocol.java
Assignment3/Server/src/main/java/bgu/spl/net/impl/rci/: RemoteCommandInvocationProtocol.java
Assignment3/Server/src/main/java/bgu/spl/net/srv/: BaseServer.java  BlockingConnectionHandler.java  ConnectionHandler.java  NonBlockingConnectionHandler.java  Reactor.java
Assignment3/assignment3Client/include/: AckFollowMessage.h  AckMessage.h  AckStatMessage.h  AckUserlistMessage.h  BidiProtocol.h  ConnectionHandler.h  EncoderDecoder.h  ErrorMessage.h  KeyboardListener.h  Message.h  NotificationMessage.h
Assignment3/assignment3Client/src/: AckFollowMessage.cpp  AckMessage.cpp  AckStatMessage.cpp  AckUserlistMessage.cpp  BGSClient.cpp  BidiProtocol.cpp  ConnectionHandler.cpp  EchoClient.cpp  EncoderDecoder.cpp  KeyboardListener.cpp  Main.cpp  Message.cpp  NotificationMessage.cpp
(+79 files in other folders)
